--- a/mexico_vs_global_scores.Rmd
+++ b/mexico_vs_global_scores.Rmd
@@ -41,7 +41,7 @@ ggplot(data, aes(x = long_goal, y = value, color = year, shape = region_name)) +
   scale_color_brewer(name = "", palette = "Blues") +
   scale_y_continuous(breaks = seq(0, 100, 10))
 
-ggsave("figs/mexico_global_scores.png", width = 8, height = 6)
+ggsave("figs/mexico_global_scores.pdf", width = 8, height = 6)
 
 ```
 
