--- a/mexico_vs_global_scores.Rmd
+++ b/mexico_vs_global_scores.Rmd
@@ -30,6 +30,35 @@ ggplot(data, aes(x = long_goal, y = value, color = year, shape = region_name)) +
   theme_bw() +
   theme(axis.text.x = element_text(face="bold", size=10, angle=45, vjust = 1, hjust = 1, color = "white"),
         axis.title.y = element_text(face = "bold", color = "white"),
+        axis.text.y = element_text(color = "white", size = 10, face = "bold"),
+        legend.text = element_text(color = "white", face = "bold", size = 11),
+        legend.title=element_blank(), 
+        panel.background = element_rect(fill = "transparent"), # bg of the panel
+        plot.background = element_rect(fill = "transparent"), # bg of the plot
+        panel.grid.minor = element_blank(), # get rid of minor grid
+        legend.background = element_rect(fill = "transparent")) + # get rid of legend bg
+  scale_x_discrete(limits=c("Overall", "Artisanal opportunities", "Biodiversity", 
+                            "Carbon storage", "Clean water", "Coastal protection", 
+                            "Food provision", "Livelihoods & economies", "Natural products", 
+                            "Sense of place", "Tourism & recreation")) +
+  scale_color_brewer(name = "", palette = "Blues") +
+  scale_y_continuous(breaks = seq(0, 100, 10))
+
+ggsave("figs/mexico_global_scores.pdf", width = 8, height = 6)
+
+```
+
+Spanish version
+
+```{r plot, fig.width = 8, fig.height = 6}
+
+ggplot(data, aes(x = long_goal, y = value, color = year, shape = region_name)) +
+  geom_point(cex = 4) +
+  ylab("SCORES") +
+  xlab("") +
+  theme_bw() +
+  theme(axis.text.x = element_text(face="bold", size=10, angle=45, vjust = 1, hjust = 1, color = "white"),
+        axis.title.y = element_text(face = "bold", color = "white"),
         axis.text.y = element_text(color = "white"),
         legend.text = element_text(color = "white"),
         legend.title=element_blank(), 
@@ -47,7 +76,5 @@ ggplot(data, aes(x = long_goal, y = value, color = year, shape = region_name)) +
 ggsave("figs/mexico_global_scores.pdf", width = 8, height = 6)
 
 ```
-
-
 
 
